--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
         "express-session": "^1.15.6",
         "fs": "0.0.1-security",
         "ip": "^1.1.5",
+        "lodash": "^4.17.10",
         "mongoose": "^5.1.6",
         "mongoose-plugin-autoinc": "^1.1.9",
+        "multer": "^1.3.0",
         "npm": "^6.1.0",
         "path": "^0.12.7",
+        "request": "^2.87.0",
         "socket.io": "^2.1.1"
     },
     "bugs": {
