--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "lodash": "^4.17.10",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b",
+    "vue-spinner": "^1.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
